--- a/views/lexicon/forms/checkbox.html.twig
+++ b/views/lexicon/forms/checkbox.html.twig
@@ -40,18 +40,9 @@
     {{
         form.checkbox({
             'id': 'guid-' ~ random(),
-            'label': 'Checkbox with guidance',
-            'guidance': 'Help text to give more information about expected input'
-        })
-    }}
-
-    {{
-        form.checkbox({
-            'id': 'guid-' ~ random(),
-            'label': 'Checkbox with guidance',
+            'label': 'Checkbox with hidden label',
             'show-label': false,
-            'help': 'This example hides the label with the <code>show-label</code> option',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'This example hides the label with the <code>show-label</code> option'
         })
     }}
 
@@ -69,7 +60,6 @@
             'id': 'guid-' ~ random(),
             'label': 'Checkbox inline plus extras',
             'help': 'Help text to give more information about expected input',
-            'guidance': 'Help text to give more information about expected input',
             'required': true
         })
     }}
@@ -88,7 +78,6 @@
             'label': 'Checkbox inline, indented plus extras',
             'class': 'form__group--indent form__group--full',
             'help': 'Help text to give more information about expected input',
-            'guidance': 'Help text to give more information about expected input',
             'required': true
         })
     }}
