--- a/views/lexicon/forms/date.html.twig
+++ b/views/lexicon/forms/date.html.twig
@@ -71,23 +71,6 @@
         })
     }}
 
-    {{
-        form.date({
-            'id': 'guid-' ~ random(),
-            'label': 'Date field with guidance',
-            'guidance': 'Help text to give more information about expected input'
-        })
-    }}
-
-    {{
-        form.date({
-            'id': 'guid-' ~ random(),
-            'label': 'Required with guidance',
-            'guidance': 'Help text to give more information about expected input',
-            'required': true
-        })
-    }}
-
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
     {{
@@ -105,8 +88,7 @@
             'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -117,8 +99,7 @@
             'class': 'form__group--top',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -129,8 +110,7 @@
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -382,15 +362,6 @@
             'id': 'guid-' ~ random(),
             'label': 'Appended',
             'append': html.icon('calendar')
-        })
-    }}
-
-    {{
-        form.date({
-            'id': 'guid-' ~ random(),
-            'label': 'Appended with guidance',
-            'append': html.icon('calendar'),
-            'guidance': 'Help text to give more information about expected input'
         })
     }}
 
