--- a/views/lexicon/forms/file.html.twig
+++ b/views/lexicon/forms/file.html.twig
@@ -29,23 +29,6 @@
         })
     }}
 
-    {{
-        form.file({
-            'id': 'guid-' ~ random(),
-            'label': 'File field with guidance',
-            'guidance': 'Help text to give more information about expected input'
-        })
-    }}
-
-    {{
-        form.file({
-            'id': 'guid-' ~ random(),
-            'label': 'Required with guidance',
-            'guidance': 'Help text to give more information about expected input',
-            'required': true
-        })
-    }}
-
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
     {{
@@ -63,8 +46,7 @@
                 'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
                 'name': 'inputTextLong',
                 'placeholder': 'Placeholder',
-                'help': 'Example block-level help text here',
-                'guidance': 'Help text to give more information about expected input'
+                'help': 'Example block-level help text here'
             })
         }}
 
@@ -75,8 +57,7 @@
                 'class': 'form__group--top',
                 'name': 'inputTextLong',
                 'placeholder': 'Placeholder',
-                'help': 'Example block-level help text here',
-                'guidance': 'Help text to give more information about expected input'
+                'help': 'Example block-level help text here'
             })
         }}
 
@@ -87,8 +68,7 @@
                 'class': 'form__group--top form__group--flush',
                 'name': 'inputTextLong',
                 'placeholder': 'Placeholder',
-                'help': 'Example block-level help text here',
-                'guidance': 'Help text to give more information about expected input'
+                'help': 'Example block-level help text here'
             })
         }}
 
@@ -339,15 +319,6 @@
             'id': 'guid-' ~ random(),
             'label': 'Appended',
             'append': '.00'
-        })
-    }}
-
-    {{
-        form.file({
-            'id': 'guid-' ~ random(),
-            'label': 'Appended with guidance',
-            'append': '.00',
-            'guidance': 'Help text to give more information about expected input'
         })
     }}
 
