--- a/views/lexicon/forms/range.html.twig
+++ b/views/lexicon/forms/range.html.twig
@@ -39,23 +39,6 @@
         })
     }}
 
-    {{
-        form.range({
-            'id': 'guid-' ~ random(),
-            'label': 'Range field with guidance',
-            'guidance': 'Help text to give more information about expected input'
-        })
-    }}
-
-    {{
-        form.range({
-            'id': 'guid-' ~ random(),
-            'label': 'Required with guidance',
-            'guidance': 'Help text to give more information about expected input',
-            'required': true
-        })
-    }}
-
     {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
@@ -74,8 +57,7 @@
             'label': 'Range input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -86,8 +68,7 @@
             'class': 'form__group--top',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -98,8 +79,7 @@
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -113,8 +93,7 @@
             'class': 'form__group--top form__group--flush form__group--mini',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -125,8 +104,7 @@
             'class': 'form__group--top form__group--flush form__group--small',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -137,8 +115,7 @@
             'class': 'form__group--top form__group--flush form__group--medium',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -149,8 +126,7 @@
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -161,8 +137,7 @@
             'class': 'form__group--top form__group--flush form__group--large',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -173,8 +148,7 @@
             'class': 'form__group--top form__group--flush form__group--xlarge',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -185,8 +159,7 @@
             'class': 'form__group--top form__group--flush form__group--full',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -439,15 +412,6 @@
             'id': 'guid-' ~ random(),
             'label': 'Appended',
             'append': '.00'
-        })
-    }}
-
-    {{
-        form.range({
-            'id': 'guid-' ~ random(),
-            'label': 'Appended with guidance',
-            'append': '.00',
-            'guidance': 'Help text to give more information about expected input'
         })
     }}
 
