--- a/views/lexicon/forms/button-group.html.twig
+++ b/views/lexicon/forms/button-group.html.twig
@@ -113,34 +113,7 @@
 
     {{
         form.button_group({
-            'label': 'Button group with guidance (radios)',
-            'guidance': 'Help text to give more information about expected input',
-            'items': [
-                {
-                    'id': 'foo-' ~ i,
-                    'label': 'Foo ' ~ i,
-                    'name': 'foo-' ~ i,
-                    'checked': true
-                },
-                {
-                    'id': 'bar-' ~ i,
-                    'label': 'Bar ' ~ i,
-                    'name': 'foo-' ~ i
-                },
-                {
-                    'id': 'baz-' ~ i,
-                    'label': 'Baz ' ~ i,
-                    'name': 'foo-' ~  i
-                }
-            ]
-        })
-    }}
-    {% set i = i + 1 %}
-
-    {{
-        form.button_group({
-            'label': 'Required with guidance, with on option pre-selected (radios)',
-            'guidance': 'Help text to give more information about expected input',
+            'label': 'Required with an option pre-selected (radios)',
             'required': true,
             'items': [
                 {
@@ -197,7 +170,6 @@
         form.button_group({
             'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline (radios)',
             'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input',
             'items': [
                 {
                     'id': 'foo-' ~ i,
@@ -225,7 +197,6 @@
             'label': 'Text input with a longer than expected label but this time we use the form__group--top class to keep the label on a single line (radios)',
             'class': 'form__group--top',
             'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input',
             'items': [
                 {
                     'id': 'foo-' ~ i,
@@ -253,7 +224,6 @@
             'label': 'The same as above, but this time we also add the .form__group--flush class to keep everything on the left edge (radios)',
             'class': 'form__group--top form__group--flush',
             'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input',
             'items': [
                 {
                     'id': 'foo-' ~ i,
