--- a/views/lexicon/forms/colour.html.twig
+++ b/views/lexicon/forms/colour.html.twig
@@ -45,23 +45,6 @@
         })
     }}
 
-    {{
-        form.color({
-            'id': 'guid-' ~ random(),
-            'label': 'Color field with guidance',
-            'guidance': 'Help text to give more information about expected input'
-        })
-    }}
-
-    {{
-        form.color({
-            'id': 'guid-' ~ random(),
-            'label': 'Required with guidance',
-            'guidance': 'Help text to give more information about expected input',
-            'required': true
-        })
-    }}
-
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
     {{
@@ -79,8 +62,7 @@
             'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -91,8 +73,7 @@
             'class': 'form__group--top',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -103,8 +84,7 @@
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
