--- a/views/lexicon/forms/password.html.twig
+++ b/views/lexicon/forms/password.html.twig
@@ -45,14 +45,6 @@
         })
     }}
 
-    {{
-        form.password({
-            'id': 'guid-' ~ random(),
-            'label': 'Password field with guidance',
-            'guidance': 'Help text to give more information about expected input'
-        })
-    }}
-
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
     {{
@@ -70,8 +62,7 @@
             'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -82,8 +73,7 @@
             'class': 'form__group--top',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -94,8 +84,7 @@
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
-            'help': 'Example block-level help text here',
-            'guidance': 'Help text to give more information about expected input'
+            'help': 'Example block-level help text here'
         })
     }}
 
@@ -347,15 +336,6 @@
             'id': 'guid-' ~ random(),
             'label': 'Appended',
             'append': html.icon('ok')
-        })
-    }}
-
-    {{
-        form.password({
-            'id': 'guid-' ~ random(),
-            'label': 'Appended with guidance',
-            'append': html.icon('remove'),
-            'guidance': 'Help text to give more information about expected input'
         })
     }}
 
