Make table detail triggers work with DT collapse mode
This change tweaks the event handlers to cope with the detail trigger changing DOM position, and adds a check so that the detail content can be fetched from the expected row rather than the collapsed detail.

Also adds a lexicon example for collapsing tables to the table detail pattern.

Closes #819

--- a/views/lexicon/patterns/table-detail/index.html.twig
+++ b/views/lexicon/patterns/table-detail/index.html.twig
@@ -6,12 +6,21 @@
     {% include '/lexicon/patterns/table-detail/table-detail.html.twig' %}
 {% endset %}
 
+{% set tab_two %}
+    {% include '/lexicon/patterns/table-detail/table-detail-collapsing.html.twig' %}
+{% endset %}
+
 {%
     set tabs_content = [
         {
             "id"    : "tabledetail",
-            "label" : "Table Detail",
-            "src"   : tab_one,
+            "label" : "Scrolling",
+            "src"   : tab_one
+        },
+        {
+            "id"    : "tabledetailcollapse",
+            "label" : "Collapsing",
+            "src"   : tab_two,
             "active": true
         }
     ]
