Allow button groups disabled all buttons, or individual buttons, when using nested syntax

--- a/stylesheets/_component.button-groups.scss
+++ b/stylesheets/_component.button-groups.scss
@@ -37,6 +37,15 @@
             border-right-color: darken(color($state), 10);
         }
     }
+
+    .is-disabled + .control__label {
+        opacity: .5;
+
+        &:hover {
+            cursor: not-allowed;
+            transform: none;
+        }
+    }
 }
 
 .btn__group > .btn + .btn,
