--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -99,8 +99,7 @@
         {
           "id"    : "repeater",
           "label" : "Repeater",
-          "src"   : tab_repeater,
-            "active": true
+          "src"   : tab_repeater
         },
         {
           "id"    : "select",
