--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -425,7 +425,7 @@ th.sorting_disabled:hover {
     }
 }
 
-.dataTables_wrapper > .table-container {
+.dataTables_wrapper .table-container {
     clear: both; // make sure container appears in correct place when used in datatable context
     margin-bottom: 0; // make sure pagination sits directly underneath the table
 }
