--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -902,19 +902,20 @@ show-label  | bool   | Control visibility of the `<label>` element without affec
 
 ## Options applied to input
 
-Option                | Type   | Description
---------------------- | ------ | ---------------------------------------------------------
-autofocus             | bool   | Whether the field should have input focus on page load
-disabled              | bool   | Stops the element from being interactive if true
-form                  | string | Specific one or more forms this label belongs to
-format                | string | Options for this can be `default`, `US` or `reverse`
-id                    | string | A unique identifier, will also be used as the label's `for` attribute
-name                  | string | The name of this control
-placeholder           | string | A short hint that describes the expected value
-required              | bool   | Adds `required` attribute
-value                 | string | Specifies the value of the input
-data-*                | string | Data attributes, eg: `'data-foo': 'bar'`
+Option                 | Type   | Description
+---------------------- | ------ | ---------------------------------------------------------
+autofocus              | bool   | Whether the field should have input focus on page load
+disabled               | bool   | Stops the element from being interactive if true
+form                   | string | Specific one or more forms this label belongs to
+format                 | string | Options for this can be `default`, `US` or `reverse`
+id                     | string | A unique identifier, will also be used as the label's `for` attribute
+name                   | string | The name of this control
+placeholder            | string | A short hint that describes the expected value
+required               | bool   | Adds `required` attribute
+value                  | string | Specifies the value of the input
+data-*                 | string | Data attributes, eg: `'data-foo': 'bar'`
 data-pulsar-datepicker | bool   | If `'true'`, the more accessible pulsar-date-picker will be used instead of pikaday
+data-pulsar-datepicker-trigger-label | string | Label for the pulsar date picker trigger button
 
 *Any other options not listed here will be applied to the input.
 
@@ -942,7 +943,7 @@ data-pulsar-datepicker | bool   | If `'true'`, the more accessible pulsar-date-p
             'data-pulsar-datepicker': options['data-pulsar-datepicker']|default('true'),
             'data-pulsar-datepicker-trigger': datePickerTriggerGuid,
             'append': html.button({
-                'label': html.icon('calendar', { 'label': 'Show calendar' }),
+                'label': html.icon('calendar', { 'label': options['data-pulsar-datepicker-trigger-label']|default('Show calendar') }),
                 'type': 'button',
                 'disabled': isDisabled ? 'disabled': '',
                 'class': isDisabled ? 'is-disabled': '',
