Fix errors in templates

--- a/views/lexicon/forms/all.html.twig
+++ b/views/lexicon/forms/all.html.twig
@@ -8,14 +8,14 @@
 
     {{
         form.compound({
-            'id': 'comp-' ~ i,
+            'id': 'comp-1',
             'class': 'form__control-col--2',
             'help': 'For example: 25 12 1980',
             'label': 'Date of birth',
             'inputs': [
                 {
                     'label': 'Day',
-                    'id': 'dd-' ~ i,
+                    'id': 'dd-1',
                     'placeholder': 'DD',
                     'append': 'Days',
                     'show-label': false,
@@ -23,7 +23,7 @@
                 },
                 {
                     'label': 'Month',
-                    'id': 'mm-' ~ i,
+                    'id': 'mm-1',
                     'prepend': 'Month',
                     'placeholder': 'MM',
                     'show-label': false,
@@ -31,7 +31,7 @@
                 },
                 {
                     'label': 'Year',
-                    'id': 'yyyy-' ~ i,
+                    'id': 'yyyy-1',
                     'append': 'Years',
                     'placeholder': 'YYYY',
                     'show-label': false,
