--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -1930,7 +1930,7 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {{
         form.text(options
             |exclude('required placeholder')
-            |defaults({'type': 'range', 'class': 'form-range'}))
+            |defaults({'type': 'range', 'class': 'form-range'})
         )
     }}
 
