--- a/views/playground/deployer/environments.html.twig
+++ b/views/playground/deployer/environments.html.twig
@@ -3,11 +3,11 @@
 {% set jsPath   = base_path ~ 'js/' %}
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Environments - Jadu Deployer</title>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="TODO">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,157 +15,32 @@
 
         <link rel="stylesheet" type="text/css" href="{{ cssPath ~ 'pulsar.css' }}" />
 
-        <script src="{{ base_path ~ 'dist/js/bundle.js' }}" id="main-js"
-        ></script>
+        <script src="{{ base_path ~ 'dist/js/bundle.js' }}" id="main-js"></script>
         <script src="{{ base_path ~ 'js/main.js' }}" ></script>
         <script src="{{ base_path ~ 'dist/js/lexicon-bundle.js' }}" ></script>
 
-        <script>
-            $(function() {
-                var $combineCheckbox = $('#combine-with-product');
-                var $versionSelectFormGroup = $('#select-version');
-
-                $combineCheckbox.on('change', function () {
-                    if ($combineCheckbox.is(':checked')) {
-                        $versionSelectFormGroup.removeClass('u-display-none');
-                    } else {
-                        $versionSelectFormGroup.addClass('u-display-none');
-                    }
-                });
-            });
-
-        </script>
-
-        <style type="text/css">
-
-            .ribbon__content {
-                margin-top: 20px;
-            }
-
-            @media screen and (min-width: 600px) {
-                .ribbon__content {
-                    display: flex;
-                }
-
-                .ribbon__list {
-                    display: flex;
-                    flex-flow: row;
-                    flex-wrap: wrap;
-                    overflow: visible;
-                }
-
-                .ribbon__list ~ .ribbon__list {
-                    margin-left: 20px;
-                }
-
-                .ribbon__list-key {
-                    flex: 0 0 50%;
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                }
-
-                .ribbon__list-value {
-                    flex: 0 0 50%;
-                    margin-left: auto;
-                    overflow: hidden;
-                    text-align: left;
-                    text-overflow: ellipsis;
-                }
-            }
-
-            .timeline {
-                list-style: none;
-                margin-top: 10px;
-            }
-
-            @media screen and (min-width: 767px) {
-                .timeline::before {
-                    left: 15px;
-                }
-            }
-
-            .timeline p {
-                margin-bottom: 5px;
-            }
-
-            .timeline-content {
-                margin-bottom: 10px;
-            }
-
-            @media screen and (min-width: 767px) {
-                .timeline-content {
-                    margin-left: 35px;
-                    margin-top: 0;
-                }
-            }
-
-            .ribbon__list-value {
-                margin-left: 0;
-            }
-        </style>
-
+        {# demo styles, will need putting in project specific sass file #}
+        {% include '@pulsar/playground/deployer/partials/style.html.twig' %}
 
     </head>
     <body>
         <a class="skip-link" href="#skip-target" tabindex="1">Skip to main content</a>
-
         <div class="container" id="top">
             <div class="inner-wrapper">
-
                 {% include '@pulsar/playground/deployer/partials/nav.html.twig' %}
-
                 <header class="toolbar">
-                    <button tabindex="2" class="mobile-menu-button t-mobile-menu-button" aria-expanded="false" aria-controls="aria-main-nav" aria-label="Toggle main menu">Menu</button>
-
-                    <!-- TODO - consider replacing with sign out naked button! do need for dropdown -->
-                    <div class="nav-user">
-                        <div class="btn__group dropdown user-menu btn--naked">
-                            <button tabindex="5" aria-haspopup="true" aria-expanded="false" aria-controls="guid-2038271773" data-toggle="dropdown" class="btn dropdown__toggle">James Jacobs&nbsp;<span class="caret"></span>
-                            </button>
-
-                            <ul id="guid-2038271773" class="dropdown__menu pull-left">
-                                <li>
-                                    <a href="#">
-                                        <i aria-hidden="true" class="icon-signout"></i> Sign out
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <!-- TODO - swap these dropdown links for buttons as they don't navigate anywhere -->
-                    <div class="nav-user">
-                        <div class="btn__group drop dropdown btn--naked">
-                            <button data-toggle="dropdown" class="btn dropdown__toggle">
-                                Project - Website&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown__menu pull-left">
-                                <li class="dropdown__header">Switch project</li>
-                                <li>
-                                    <button class="btn">
-                                        <i class="icon-ok-sign"></i> Website
-                                    </button>
-                                </li>
-                                <li>
-                                    <button class="">
-                                        <i class="icon-circle-blank muted"></i>DeployerLGAQ
-                                    </button>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <!--
+                    {% include '@pulsar/playground/deployer/partials/toolbar-controls.html.twig' %}
+                    {#
                         flash-container needs to be in the DOM before the flash message is added, ideally on page load
                         When empty, needs to be completely empty no white space
-                    -->
+                    #}
                     {% spaceless %}
                     <div class="flash-container js-flash-container" role="status">
 
-                        <!-- this should be added to the DOM after the flash-container parent in order for it to be annouced to SRs -->
+                        {# This should be added to the DOM after the flash-container parent in order for it to be annouced to SRs #}
                         {# example flash markup
-                        <section class="flash flash--info" aria-labelledby="guid-1921523354">
-                            <i aria-hidden="true" class="icon-spinner icon-spin"></i><h2 id="guid-1921523354">This build is processing. This process can take up to 10 minutes.</h2>
+                        <section class="flash flash--success" aria-labelledby="guid-1921523354">
+                            <i aria-hidden="true" class="icon-spinner icon-spin"></i><h2 id="guid-1921523354">Environment successfully created</h2>
                             <button class="close" data-dismiss="flash">
                                 <i class="icon-remove"><span class="hide">Close</span></i>
                             </button>
@@ -173,10 +48,8 @@
                         #}
                     </div>
                     {% endspaceless %}
-
-                    <h1 class="main-title" tabindex="-1">Environments</h1>
+                    <h1 class="main-title main-title--standalone" tabindex="-1">Environments</h1>
                 </header>
-
                 <div class="content-main">
                     <div class="tabs__content">
                         <div class="tab__pane is-active">
@@ -201,39 +74,33 @@
                                                     <th>Last connection</th>
                                                     <th>Memory limit</th>
                                                     <th>Enabled</th>
-                                                    <th class="shrink-to-fit">API Key</th>
                                                 </tr>
                                             </thead>
-
-                                            {# need to allow for edit and delete here !#}
                                             <tbody>
                                                 <tr>
-                                                    <td><a href="#editEnvironmentModal" data-toggle="modal" >uat.jadu.net</a></td>
+                                                    <td><a href="http://localhost:3001/app/app.php/playground/deployer/environment.html.twig">uat.jadu.net</a></td>
                                                     <td><i class="status is-online"></i> Live</td>
                                                     <td><span class="label label--primary">continuum #112</span> <span class="label">package 1.28.2</span></td>
                                                     <td>2 mins ago</td>
                                                     <td>64MB</td>
-                                                    <td>Yes {# use label or status? #}</td>
-                                                    <td>GddEtb0EdYWBgkJLuLnZEw==</td> {# not sure if we should show this in the table...#}
+                                                    <td>Yes</td>
                                                 </tr>
 
                                                 <tr>
-                                                    <td><a href="#editEnvironmentModal" data-toggle="modal" >uat2.jadu.net</a></td>
+                                                    <td><a href="http://localhost:3001/app/app.php/playground/deployer/environment.html.twig">uat2.jadu.net</a></td>
                                                     <td><i class="status is-offline"></i> Offline</td>
                                                     <td><span class="label label--primary">continuum #112</span> <span class="label">package 1.28.1</span></td>
                                                     <td>20 mins ago</td>
                                                     <td>64MB</td>
-                                                    <td>Yes {# use label or status? #}</td>
-                                                    <td>GddEtb0EdYWBgkJLuLnZEw==</td>
+                                                    <td>Yes</td>
                                                 </tr>
                                                 <tr>
-                                                    <td><a href="#editEnvironmentModal" data-toggle="modal" >uat3.jadu.net</a></td>
+                                                    <td><a href="http://localhost:3001/app/app.php/playground/deployer/environment.html.twig">uat3.jadu.net</a></td>
                                                     <td><i class="status is-online"></i> Live</td>
                                                     <td><span class="label label--primary">continuum #112</span> <span class="label">package 1.26.2</span></td>
                                                     <td>2 mins ago</td>
                                                     <td>64MB</td>
-                                                    <td>Yes {# use label or status? #}</td>
-                                                    <td>GddEtb0EdYWBgkJLuLnZEw==</td>
+                                                    <td>Yes</td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -245,57 +112,30 @@
                 </div>
             </div>
         </div>
-        <div class="modal modal--large" id="editEnvironmentModal" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="editEnvironmentModal-title" aria-hidden="false">
-            <div class="modal__dialog">
-                <div class="modal__content">
-                    <form><!-- because inputs should be wrapped in a form... COULD WE MOVE INSIDE OF BODY AFTER P? SR TEST -->
-                        <div class="modal__header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
-                            <h1 class="modal__title" id="editEnvironmentModal-title">Edit Environment</h1>
-                        </div>
-                        <div class="modal__body">
-                            <div class="form__group form__group--full">
-                                <label for="guid-1754188012" class="control__label">URL&nbsp;<span aria-hidden="true" class="required-indicator" data-tippy-content="required">*</span></label>
-                                <div class="controls">
-                                    <input id="guid-1754188012" type="text" class="form__control" required value="uat.jadu.net">
-                                </div>
-                            </div>
-                            <div class="form__group  form__group--toggle">
-                                <label class="toggle-switch-wrapper-label" for="guid-1299616969">
-                                    <span class="control__label">Enable</span>
-                                    <span class="controls">
-                                        <input id="guid-1299616969" type="checkbox" class="form__control toggle-switch">
-                                        <span class="toggle-switch-label"></span>
-                                    </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="modal__footer">
-                            <button type="button" class="btn btn--primary">Save</button>
-                            <button type="button" class="btn btn--naked" data-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn--danger float--right" data-dismiss="modal">Delete</button>
-                        </div>
-                    </form>
-                </div><!-- /.modal__content -->
-            </div><!-- /.modal__dialog -->
-        </div><!-- /.modal -->
 
         <div class="modal modal--large" id="newEnvironmentModal" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="newEnvironmentModal-title" aria-describedby="newEnvironmentModal-description" aria-hidden="false">
             <div class="modal__dialog">
                 <div class="modal__content">
-                    <form><!-- because inputs should be wrapped in a form... COULD WE MOVE INSIDE OF BODY AFTER P? SR TEST -->
+                    <form>
                         <div class="modal__header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                             <h1 class="modal__title" id="newEnvironmentModal-title">New Environment</h1>
                         </div>
                         <div class="modal__body">
 
-                            <p id="newEnvironmentModal-description">Add a new environment by adding the URL of your website. After you save the new environment, a new API key will be generated. You will need to add this key into your website <strong>Utilities &gt; Integrations &gt; Deployer </strong>.</p>
+                            <p id="newEnvironmentModal-description">Add a new environment by adding the URL of your website. After you save the new environment, a new API key will be generated. You will need to add this key into your website <strong>Utilities &gt; Integrations &gt; Deployer.</strong></p>
 
                             <div class="form__group form__group--full">
-                                <label for="guid-1754188012" class="control__label">URL&nbsp;<span aria-hidden="true" class="required-indicator" data-tippy-content="required">*</span></label>
+                                <label for="guid-1754188012" class="control__label">URL&nbsp;<span aria-hidden="true" class="required-indicator">*</span></label>
                                 <div class="controls">
                                     <input id="guid-1754188012" type="text" class="form__control" required value="uat.jadu.net">
+                                </div>
+                            </div>
+                            <div class="form__group form__group--full">
+                                <label for="guid-23498728347" class="control__label">Memory limit (MB)&nbsp;<span aria-hidden="true" class="required-indicator">*</span></label>
+                                <div class="controls">
+                                    <input id="guid-23498728347" aria-describedby="guid-186440945" type="text" class="form__control" required value="64">
+                                    <span class="help-block" id="guid-186440945">The amount of memory available for a deployment</span>
                                 </div>
                             </div>
                             <div class="form__group  form__group--toggle">
@@ -309,12 +149,12 @@
                             </div>
                         </div>
                         <div class="modal__footer">
-                            <button type="button" class="btn btn--primary">Save</button>
+                            <button type="submit" class="btn btn--primary">Save</button>
                             <button type="button" class="btn btn--naked" data-dismiss="modal">Cancel</button>
                         </div>
                     </form>
-                </div><!-- /.modal__content -->
-            </div><!-- /.modal__dialog -->
-        </div><!-- /.modal -->
+                </div>
+            </div>
+        </div>
     </body>
 </html>
