--- a/views/playground/deployer/index.html.twig
+++ b/views/playground/deployer/index.html.twig
@@ -49,7 +49,7 @@
                     <div class="flash-container js-flash-container">
                         <section class="flash flash--info" aria-labelledby="guid-1921523354"><i aria-hidden="true" class="icon-spinner icon-spin"></i><h2 id="guid-1921523354">A Package is being created. This process can take up to 10 minutes. Check below for progress.</h2><button class="close" data-dismiss="flash"><i class="icon-remove"><span class="hide">Close</span></i></button></section>
                     </div>
-                    <h1 class="main-title">Dashboard PROJECT NAME</h1>
+                    <h1 class="main-title" tabindex="-1">Dashboard PROJECT NAME</h1>
                 </header>
                 <div class="content-main">
                     {# Note the different location of main in this template - to discuss #}
