Remove outline from main-title when focussed

--- a/views/playground/deployer/partials/style.html.twig
+++ b/views/playground/deployer/partials/style.html.twig
@@ -96,4 +96,8 @@
     .table .table-actions-td {
         padding: 6px 10px;
     }
+
+    .main-title:focus {
+        outline: none;
+    }
 </style>
