--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -756,26 +756,37 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as html %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
+    {% set isRemovable = false %}
+    {% if options.removable is defined and options.removable == true %}
+        {% set isRemovable = true %}
+    {% endif %}
+
     <span{{
         attributes(options
             |exclude('label removable remove_target')
             |defaults({
-                'class': 'label'
+                'class': isRemovable ? 'label label--removable' : 'label'
             })
         )
     }}>
-        {{- options.label|default|raw -}}
-        {% if options.removable is defined and options.removable == true %}
-        {{
-            html.remove_button({
-                'tooltip': false,
-                'target': 'this',
-                'label': 'Remove ' ~ options.label|default
-            })
-        }}
+        {% if isRemovable %}
+            <span class="label__text">
+                {{- options.label|default|raw -}}
+            </span>
+        {% else %}
+            {{- options.label|default|raw -}}
+        {% endif %}
+
+        {% if isRemovable %}
+            {{
+                html.remove_button({
+                    'tooltip': false,
+                    'target': 'this',
+                    'label': 'Remove ' ~ options.label|default
+                })
+            }}
         {% endif %}
     </span>
-
 {% endspaceless %}
 {% endmacro %}
 
