fix lexicon example duplicate ID

--- a/views/lexicon/forms/repeater.html.twig
+++ b/views/lexicon/forms/repeater.html.twig
@@ -58,7 +58,7 @@
                 {{
                     form.text({
                         'label': 'name',
-                        'id': 'repeater-text',
+                        'id': 'repeater-text-2',
                         'name': 'text'
                     })
                 }}
